   miscalculations.

 - GET-INTERNAL-REAL-TIME now works on Windows with 1/60s precision
   (contributed by Dustin Long)

 - When :INITFORM was a constant variable but not self evaluating (i.e. not T,
   NIL, or a keyword), it was not processed properly
	(defclass a () ((a :initform most-positive-fixnum)))
	(slot-value (make-instance a) 'a) => most-positive-fixnum

 - The namestring "." was improperly parsed has having file type "".

 - Now the file type is determined by the last dot in the name.
	(pathname-type "foo.mpq.txt") => "txt"

 - When iterating over a hash table we now check that the argument is really a
   hash table.

 - *COMPILE-VERBOSE* and *COMPILE-PRINT* now also have effect when compiling
   isolated lambda forms using COMPILE. Additionally, these variables are
   defined even without the compiler loaded.

 - DESCRIBE was not prepare for the number range types returned by TYPE-OF.

 - In OS X, ECL can now load shared libraries (Extension *.dylib) thanks
   to using dlopen() instead of the obsolete NSLinkModule() function.

* Visible changes:

 - EXT:PROCESS-COMMAND-ARGS now allows for a default rule.

 - Variable EXT:*HELP-MESSAGE* and EXT:+DEFAULT-COMMAND-ARG-RULES+ exported.

 - C:BUILD-PROGRAM now uses a unique prefix for the initialization function,
   init_ECL_PROGRAM, to avoid collisions when both the program and a component
   have the same name:
	(C:BUILD-PROGRAM "ls" :lisp-files '("ls.o"))

 - FFI:CLINES is no longer restricted to appear as a toplevel form. The
   following code is thus valid:
	(defun c-sin (x)
	  (ffi:clines "#include <math.h>")
	  (ffi:c-inline (x) (:double) :double "sin(#0)" :one-liner t))

 - Minimized the number of headers included by ecl/ecl.h. In particular,
   stdio.h, inittypes.h and pthread.h are no longer used.

 - When a compiler finds a literal standard object, the load and initialization
   forms it generates are now closer to the first reference to the object. This